# formflow-automation

./: .gitignore  pyproject.toml
docs/: Setup.md  formflow-automation.layout.md
scripts/: getDirStructure.py  xml_generator.py
